# yatagfs-

./: README.md  flake.nix  meson.build
src/: fuse.cxx  fuse.hxx  main.cxx  meson.build  sqlite.cxx  sqlite.hxx  tagfs.cxx  tagfs.hxx
